--- a/analysis/paper/references.bib
+++ b/analysis/paper/references.bib
@@ -201,3 +201,18 @@
 	date = {2001},
 	url = {https://snowballstem.org}
 }
+
+@inbook{jo2019,
+	title = {Introduction},
+	author = {Jo, Taeho},
+	editor = {Jo, Taeho},
+	year = {2019},
+	date = {2019},
+	publisher = {Springer International Publishing},
+	pages = {3--17},
+	doi = {10.1007/978-3-319-91815-0_1},
+	url = {https://doi.org/10.1007/978-3-319-91815-0_1},
+	note = {DOI: 10.1007/978-3-319-91815-0{\_}1},
+	address = {Cham},
+	langid = {en}
+}
