--- a/analysis/paper/references.bib
+++ b/analysis/paper/references.bib
@@ -216,3 +216,19 @@
 	address = {Cham},
 	langid = {en}
 }
+
+@article{marwick2018,
+	title = {Packaging Data Analytical Work Reproducibly Using R (and Friends)},
+	author = {Marwick, Ben and Boettiger, Carl and Mullen, Lincoln},
+	year = {2018},
+	month = {01},
+	date = {2018-01-02},
+	journal = {The American Statistician},
+	pages = {80--88},
+	volume = {72},
+	number = {1},
+	doi = {10.1080/00031305.2017.1375986},
+	url = {https://doi.org/10.1080/00031305.2017.1375986},
+	note = {Publisher: Taylor & Francis
+{\_}eprint: https://doi.org/10.1080/00031305.2017.1375986}
+}
